--- a/src/main/resources/static/static.html
+++ b/src/main/resources/static/static.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <title>静态页面</title>
 </head>
+
+<style type="text/css">
+    .div-head {
+        background-color: darkgray;
+    }
+    .div-head h1{
+        color: white;
+    }
+</style>
+
 <body>
 
-    这是一个静态页面
+<div class="div-body">
+    <div class="div-head">
+        <h1>程序猿哥哥做的打车比价神器</h1>
+    </div>
+</div>
 
 </body>
 </html>
